--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
         <maven.dependency.plugin.version>2.8</maven.dependency.plugin.version>
         <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>
+        <maven.pmd.plugin.version>3.14.0</maven.pmd.plugin.version>
     </properties>
 
     <dependencies>
@@ -112,6 +113,12 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>${maven.pmd.plugin.version}</version>
             </plugin>
 
             <plugin>
