--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>${maven.pmd.plugin.version}</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/site/pmd</outputDirectory>
+                </configuration>
             </plugin>
 
             <plugin>
