--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
         <maven.jacoco.plugin.version>0.8.8</maven.jacoco.plugin.version>
 
-        <configFilePath>${basedir}\src\main\resources\config.txt</configFilePath>
+        <configFilePath>${basedir}/src/main/resources/config.json</configFilePath>
     </properties>
 
     <profiles>
@@ -201,6 +201,22 @@
                             <mainClass>az.my.datareport.DataReportMain</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>src/main/resources</directory>
+                            <includes>
+                                <include>*.xlsx</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
                 </configuration>
             </plugin>
 
