--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.2-SNAPSHOT</version>
     <modules>
         <module>data-report-web</module>
+        <module>data-report-core</module>
     </modules>
 
     <name>Data Report</name>
@@ -123,6 +124,12 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>${log4j.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>az.my.datareport</groupId>
+            <artifactId>data-report-core</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
