--- a/data-report-web/pom.xml
+++ b/data-report-web/pom.xml
@@ -30,6 +30,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <version>2.7.3</version>
             <scope>runtime</scope>
