--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>data-report-web</module>
         <module>data-report-core</module>
         <module>data-report-application</module>
+        <module>data-report-server</module>
     </modules>
 
     <name>Data Report</name>
