--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>data-report-application</module>
         <module>data-report-server</module>
         <module>data-report-exporter</module>
+        <module>data-report-parser</module>
     </modules>
 
     <name>Data Report</name>
