--- a/data-report-scraper/pom.xml
+++ b/data-report-scraper/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-scraper</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>az.my.datareport</groupId>
+            <artifactId>data-report-core</artifactId>
+            <version>1.0.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
