--- a/data-report-application/pom.xml
+++ b/data-report-application/pom.xml
@@ -12,16 +12,10 @@
     <artifactId>data-report-application</artifactId>
     <dependencies>
         <dependency>
-            <groupId>az.my.datareport</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>data-report-server</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
-
 </project>
