--- a/data-report-exporter/pom.xml
+++ b/data-report-exporter/pom.xml
@@ -10,18 +10,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-exporter</artifactId>
+
+    <properties>
+        <apache.poi.version>5.2.2</apache.poi.version>
+        <apache.poi.ooxml.version>5.2.2</apache.poi.ooxml.version>
+    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>az.my.datareport</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>data-report-core</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${apache.poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${apache.poi.ooxml.version}</version>
         </dependency>
     </dependencies>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
 </project>
