--- a/data-report-parser/pom.xml
+++ b/data-report-parser/pom.xml
@@ -10,18 +10,28 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-parser</artifactId>
+
+    <properties>
+        <google.guava.version>31.1-jre</google.guava.version>
+    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>az.my.datareport</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>data-report-core</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${google.guava.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
 </project>
