--- a/data-report-scanner/pom.xml
+++ b/data-report-scanner/pom.xml
@@ -10,12 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-scanner</artifactId>
+
     <dependencies>
         <dependency>
-            <groupId>az.my.datareport</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>data-report-core</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -25,9 +31,5 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
 
 </project>
