--- a/data-report-scraper/pom.xml
+++ b/data-report-scraper/pom.xml
@@ -10,18 +10,35 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-scraper</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>az.my.datareport</groupId>
-            <artifactId>data-report-core</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!--dependency versions-->
+        <selenium.java.version>4.5.0</selenium.java.version>
+        <webdrivermanager.version>5.3.0</webdrivermanager.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>data-report-core</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium.java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>${webdrivermanager.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
