--- a/data-report-server/pom.xml
+++ b/data-report-server/pom.xml
@@ -10,30 +10,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-server</artifactId>
+
     <dependencies>
         <dependency>
-            <groupId>az.my.datareport</groupId>
-            <artifactId>data-report-scraper</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>az.my.datareport</groupId>
-            <artifactId>data-report-exporter</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>az.my.datareport</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>data-report-scanner</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>data-report-scraper</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>data-report-exporter</artifactId>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
-
 </project>
