--- a/data-report-web/pom.xml
+++ b/data-report-web/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>data-report-web</artifactId>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <spring.boot.version>2.7.3</spring.boot.version>
+        <spring.boot.thymeleaf.version>2.6.7</spring.boot.thymeleaf.version>
     </properties>
 
 
@@ -21,46 +21,40 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>2.6.7</version>
+            <version>${spring.boot.thymeleaf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.7.4</version>
+            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.7.3</version>
+            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <version>2.7.3</version>
+            <version>${spring.boot.version}</version>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-            <version>2.7.3</version>
+            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>az.my.datareport</groupId>
-            <artifactId>data-report</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>az.my.datareport</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>data-report-scraper</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>az.my.datareport</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>data-report-exporter</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
