--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>data-report-parser</module>
         <module>data-report-scanner</module>
         <module>data-report-scraper</module>
+        <module>data-report-shared-resources</module>
     </modules>
 
     <name>Data Report</name>
@@ -33,12 +34,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <!--dependency versions-->
         <jackson.databind.version>2.13.4.2</jackson.databind.version>
-        <selenium.java.version>4.5.0</selenium.java.version>
-        <webdrivermanager.version>5.3.0</webdrivermanager.version>
-        <apache.poi.version>5.2.2</apache.poi.version>
-        <apache.poi.ooxml.version>5.2.2</apache.poi.ooxml.version>
         <commons.io.version>2.11.0</commons.io.version>
 
         <junit.jupiter.version>5.9.0</junit.jupiter.version>
@@ -78,37 +74,22 @@
         <url>https://github.com/mammadyahyayev/data-report/issues</url>
     </issueManagement>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.databind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons.io.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.databind.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>${selenium.java.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.bonigarcia</groupId>
-            <artifactId>webdrivermanager</artifactId>
-            <version>${webdrivermanager.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>${apache.poi.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>${apache.poi.ooxml.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons.io.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
