--- a/data-report-web/pom.xml
+++ b/data-report-web/pom.xml
@@ -14,6 +14,9 @@
     <properties>
         <spring.boot.version>2.7.3</spring.boot.version>
         <spring.boot.thymeleaf.version>2.6.7</spring.boot.thymeleaf.version>
+
+        <hamcrest.version>2.2</hamcrest.version>
+        <jsonpath.version>2.5.0</jsonpath.version>
     </properties>
 
 
@@ -56,6 +59,18 @@
             <artifactId>data-report-exporter</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${jsonpath.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
