--- a/data-report-core/pom.xml
+++ b/data-report-core/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-core</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <commons.io.version>2.11.0</commons.io.version>
