--- a/data-report-parser/pom.xml
+++ b/data-report-parser/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-parser</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <google.guava.version>31.1-jre</google.guava.version>
