--- a/data-report-server/pom.xml
+++ b/data-report-server/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-server</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
