--- a/data-report-web/pom.xml
+++ b/data-report-web/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>data-report-web</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <spring.boot.version>2.7.3</spring.boot.version>
