--- a/data-report-shared-resources/pom.xml
+++ b/data-report-shared-resources/pom.xml
@@ -21,10 +21,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                    <include>**/*.json</include>
-                    <include>**/*.txt</include>
+                    <include>**/*</include>
                 </includes>
             </resource>
         </resources>
