--- a/data-report-scanner/pom.xml
+++ b/data-report-scanner/pom.xml
@@ -14,10 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>az.my.datareport</groupId>
             <artifactId>data-report-core</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
+            <version>2.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -25,9 +24,9 @@
             <version>${jackson.databind.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>az.my.datareport</groupId>
             <artifactId>data-report-shared-resources</artifactId>
-            <version>${project.version}</version>
+            <version>2.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -49,6 +48,5 @@
             <artifactId>log4j-core</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
