Add test scope to data-report-shared-resources module

--- a/data-report-core/pom.xml
+++ b/data-report-core/pom.xml
@@ -21,7 +21,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>data-report-shared-resources</artifactId>
             <version>${project.version}</version>
-            <scope>runtime</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
