--- a/data-report-scanner/pom.xml
+++ b/data-report-scanner/pom.xml
@@ -27,7 +27,7 @@
             <groupId>az.my.datareport</groupId>
             <artifactId>data-report-shared-resources</artifactId>
             <version>2.1.0-SNAPSHOT</version>
-            <scope>runtime</scope>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
