--- a/data-report-shared-resources/pom.xml
+++ b/data-report-shared-resources/pom.xml
@@ -19,10 +19,11 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>${basedir}/src/main/resources</directory>
                 <includes>
                     <include>**/*</include>
                 </includes>
+                <filtering>false</filtering>
             </resource>
         </resources>
 
