Add jetbrains annotations dependency

--- a/data-report-core/pom.xml
+++ b/data-report-core/pom.xml
@@ -54,5 +54,9 @@
             <version>${guava.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
