--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
         <log4j.api.version>2.19.0</log4j.api.version>
         <log4j.core.version>2.19.0</log4j.core.version>
 
+        <jetbrains.annotations.version>24.0.0</jetbrains.annotations.version>
+
         <maven.jar.plugin.version>3.2.2</maven.jar.plugin.version>
         <maven.dependency.plugin.version>2.8</maven.dependency.plugin.version>
         <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>
@@ -117,6 +119,12 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains</groupId>
+                <artifactId>annotations</artifactId>
+                <version>${jetbrains.annotations.version}</version>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
