--- a/app/pom.xml
+++ b/app/pom.xml
@@ -6,25 +6,25 @@
         <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>data-report-application</artifactId>
+    <artifactId>app</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>data-report-core</artifactId>
+            <artifactId>core</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>data-report-exporter</artifactId>
+            <artifactId>export</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>data-report-scraper</artifactId>
+            <artifactId>scrape</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
