--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>data-report-core</artifactId>
+    <artifactId>core</artifactId>
     <packaging>jar</packaging>
 
     <properties>
