--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
     <packaging>pom</packaging>
     <version>3.0.0-SNAPSHOT</version>
     <modules>
-        <module>data-report-core</module>
-        <module>data-report-application</module>
-        <module>data-report-exporter</module>
-        <module>data-report-scraper</module>
+        <module>core</module>
+        <module>app</module>
+        <module>export</module>
+        <module>scrape</module>
     </modules>
 
     <name>Data Report</name>
