Refactor internal modules dependency groupIds

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -11,19 +11,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>az.caspian</groupId>
             <artifactId>core</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>az.caspian</groupId>
             <artifactId>export</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>az.caspian</groupId>
             <artifactId>scrape</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
