Add client-ui sub module

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>azscrape-api</module>
         <module>client</module>
         <module>server</module>
+        <module>client-ui</module>
     </modules>
 
     <name>azscrape</name>
